[package]
name = "av-decoders"
version = "0.3.1"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Decoders for use in the rust-av ecosystem"
license = "MIT"
repository = "https://github.com/rust-av/av-decoders"
include = ["src/**/*", "LICENSE"]

[dependencies]
ffmpeg-the-third = { version = "3.0.2", optional = true, default-features = false, features = [
    "codec",
    "format",
] }
num-rational = "0.4.2"
thiserror = "2.0.12"
v_frame = "0.3.9"
vapoursynth = { version = "0.4.0", features = [
    "vsscript-functions",
    "vapoursynth-functions",
    "vapoursynth-api-36",
    "vsscript-api-32",
], optional = true }
y4m = "0.8"

[features]
# Support decoding via Vapoursynth
vapoursynth = ["dep:vapoursynth"]
# Support decoding via ffmpeg
ffmpeg = ["dep:ffmpeg-the-third"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-the-third/static"]
# Build FFmpeg statically
ffmpeg_build = ["ffmpeg-the-third/build", "ffmpeg-the-third/build-lib-dav1d"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
inline_always = "warn"
missing_inline_in_public_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
uninlined_format_args = "allow"
unwrap_used = "warn"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "decoders_bench"
harness = false
