[package]
name = "av-decoders"
version = "0.8.1"
edition = "2024"
rust-version = "1.85"
description = "Decoders for use in the rust-av ecosystem"
license = "MIT"
repository = "https://github.com/rust-av/av-decoders"
include = ["src/**/*", "LICENSE", "README.md", "Cargo.toml"]

[dependencies]
ffmpeg-the-third = { version = "4.0.1", optional = true, default-features = false, features = [
    "codec",
    "format",
] }
ffms2-sys = { version = "0.3.0", optional = true }
num-rational = "0.4.2"
thiserror = "2.0.17"
v_frame = "0.4"
vapoursynth = { version = "0.5", optional = true }
y4m = "0.8"

[features]
# Support decoding via Vapoursynth
vapoursynth = ["dep:vapoursynth"]
# Support decoding via ffmpeg
ffmpeg = ["dep:ffmpeg-the-third"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg", "ffmpeg-the-third/static"]
# Build FFmpeg statically
ffmpeg_build = [
    "ffmpeg",
    "ffmpeg-the-third/build",
    "ffmpeg-the-third/build-lib-dav1d",
]
# Support decoding via ffms2
ffms2 = ["dep:ffms2-sys"]
# Link ffms2 statically
ffms2_static = ["ffms2", "ffms2-sys/static"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Performance
clear_with_drain = "warn"
format_collect = "warn"
format_push_string = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
inline_always = "warn"
iter_with_drain = "warn"
large_include_file = "warn"
large_types_passed_by_value = "warn"
linkedlist = "deny"
missing_inline_in_public_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_pass_by_value = "warn"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
or_fun_call = "warn"
rc_buffer = "warn"
redundant_clone = "warn"
ref_option = "warn"
set_contains_or_insert = "warn"
stable_sort_primitive = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
trivial_regex = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unused_async = "warn"
verbose_file_reads = "warn"
# Readability/Code Intention
allow_attributes = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
mod_module_files = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_test_prefix = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
tests_outside_test_module = "warn"
transmute_ptr_to_ptr = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
verbose_bit_mask = "warn"
zero_sized_map_values = "warn"
# Correctness/Safety
case_sensitive_file_extension_comparisons = "warn"
cfg_not_test = "deny"
collection_is_never_read = "warn"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "deny"
expl_impl_clone_on_copy = "deny"
filetype_is_file = "warn"
future_not_send = "warn"
ignore_without_reason = "warn"
infinite_loop = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
manual_midpoint = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
mixed_read_write_in_expression = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
non_send_fields_in_send_ty = "deny"
path_buf_push_overwrite = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
significant_drop_in_scrutinee = "deny"
str_split_at_newline = "warn"
string_slice = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
transmute_undefined_repr = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_debug_formatting = "warn"
unwrap_used = "warn"
# Documentation
doc_link_with_quotes = "warn"
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_safety_doc = "warn"
# Annoyances
uninlined_format_args = "allow"


[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "decoders_bench"
harness = false
