[package]
name = "av-decoders"
version = "0.9.1"
edition = "2024"
rust-version = "1.85"
description = "Decoders for use in the rust-av ecosystem"
repository = "https://github.com/rust-av/av-decoders"
license = "MIT"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**/*"]

[[bench]]
harness = false
name = "decoders_bench"

[dependencies]
ffmpeg-the-third = { version = "4.0.1", default-features = false, features = [
  "codec",
  "format",
], optional = true }
ffms2-sys = { version = "0.3.0", optional = true }
num-rational = "0.4.2"
thiserror = "2.0.17"
v_frame = "0.5"
vapoursynth = { version = "0.5", optional = true }
y4m = "0.8"

[dev-dependencies]
criterion = "0.8.0"

[features]
# Support decoding via ffmpeg
ffmpeg = ["dep:ffmpeg-the-third"]
# Build FFmpeg statically
ffmpeg_build = [
  "ffmpeg",
  "ffmpeg-the-third/build",
  "ffmpeg-the-third/build-lib-dav1d",
]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg", "ffmpeg-the-third/static"]
# Support decoding via ffms2
ffms2 = ["dep:ffms2-sys"]
# Link ffms2 statically
ffms2_static = ["ffms2", "ffms2-sys/static"]
# Support decoding via Vapoursynth
vapoursynth = ["dep:vapoursynth"]

[lints.clippy]
# Correctness/Safety
case_sensitive_file_extension_comparisons = "warn"
cfg_not_test = "deny"
checked_conversions = "warn"
# Performance
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "deny"
# Documentation
doc_link_with_quotes = "warn"
doc_markdown = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "deny"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_collect = "warn"
format_push_string = "warn"
future_not_send = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
inline_always = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
large_futures = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
linkedlist = "deny"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_errors_doc = "warn"
missing_inline_in_public_items = "warn"
missing_safety_doc = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
non_send_fields_in_send_ty = "deny"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "deny"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
transmute_ptr_to_ptr = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "warn"
# Annoyances
uninlined_format_args = "allow"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unwrap_used = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[lints.rust]
missing_docs = "warn"
